MET-5876 Task manager pod on the openshift now uses private (non-persistent volume) for dump storing.

--- a/paas/taskmanager-session-deployment.yaml
+++ b/paas/taskmanager-session-deployment.yaml
@@ -56,5 +56,4 @@ spec:
         - emptyDir: { }
           name: conf-volume
         - name: dumps
-          persistentVolumeClaim:
-            claimName: task-manager-dumps
+          emptyDir: { }
