MET-5873 add checkpoints to flink and docker-compose for local development

--- a/paas/flink-client.yaml
+++ b/paas/flink-client.yaml
@@ -27,6 +27,8 @@ spec:
               mountPath: /opt/flink/log
             - name: jobs-config
               mountPath: /jobs-config
+            - name: checkpoints
+              mountPath: /data/flink/checkpoints
       volumes:
         - name: deployments
           persistentVolumeClaim:
