MET-5873 add checkpoints and workflow all topologies without api call

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
   flink-jobmanager:
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile
     container_name: flink-rich-poc-jm
     command: jobmanager
@@ -49,7 +49,10 @@ services:
           jobstore.expiration-time: 172800 \n
           jobstore.type: File \n
           process.jobmanager.working-dir: /working-directory \n
-          state.checkpoints.dir: /data/flink/checkpoints \n
+          state.backend.type: filesystem \n
+          state.checkpoints.dir: file:///data/flink/checkpoints \n                       
+          execution.checkpointing.interval: 5000 \n
+          execution.checkpointing.mode: AT_LEAST_ONCE \n
           jobmanager.resource-id: poc1"
     volumes:
       - /data/flink/deployments:/deployments
@@ -64,28 +67,31 @@ services:
       - flink-network
   flink-taskmanager:
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile
     container_name: flink-rich-poc-tm
     command: taskmanager
     environment:
       - "FLINK_PROPERTIES = jobmanager.rpc.address: jobmanager \n
-               taskmanager.numberOfTaskSlots: 4 \n
-               blob.server.port: 6124 \n
-               jobmanager.rpc.port: 6123 \n
-               taskmanager.rpc.port: 6122 \n
-               jobmanager.memory.process.size: 2728m \n
-               taskmanager.memory.process.size: 2728m \n
-               taskmanager.memory.jvm-metaspace.size: 512MB \n
-               jobmanager.memory.jvm-metaspace.size: 512MB \n
-               parallelism.default: 2 \n
-               env.java.opts.all: \"-XX:MaxDirectMemorySize=1170210816 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.port=1099 -Dcom.sun.management.jmxremote.rmi.port=1099 -Djava.rmi.server.hostname=127.0.0.1 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/dumps\" \n
-               web.upload.dir: /web-upload \n
-               jobstore.expiration-time: 172800 \n
-               jobstore.type: File \n
-               process.jobmanager.working-dir: /working-directory \n
-               state.checkpoints.dir: /data/flink/checkpoints \n
-               jobmanager.resource-id: poc1"
+           taskmanager.numberOfTaskSlots: 4 \n
+           blob.server.port: 6124 \n
+           jobmanager.rpc.port: 6123 \n
+           taskmanager.rpc.port: 6122 \n
+           jobmanager.memory.process.size: 2728m \n
+           taskmanager.memory.process.size: 2728m \n
+           taskmanager.memory.jvm-metaspace.size: 512MB \n
+           jobmanager.memory.jvm-metaspace.size: 512MB \n
+           parallelism.default: 2 \n
+           env.java.opts.all: \"-XX:MaxDirectMemorySize=1170210816 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.time=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.port=1099 -Dcom.sun.management.jmxremote.rmi.port=1099 -Djava.rmi.server.hostname=127.0.0.1 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/dumps\" \n
+           web.upload.dir: /web-upload \n
+           jobstore.expiration-time: 172800 \n
+           jobstore.type: File \n
+           process.jobmanager.working-dir: /working-directory \n
+           state.backend.type: filesystem \n
+           state.checkpoints.dir: file:///data/flink/checkpoints \n                       
+           execution.checkpointing.interval: 5000 \n
+           execution.checkpointing.mode: AT_LEAST_ONCE \n
+           jobmanager.resource-id: poc1"
     ports:
       - '6122:6122'
     networks:
@@ -101,4 +107,3 @@ volumes:
   flink-log:
     name: flink-log
     driver: local
-
