--- a/paas/flink-configuration-configmap.yaml
+++ b/paas/flink-configuration-configmap.yaml
@@ -60,7 +60,7 @@ data:
     appender.console.name = ConsoleAppender
     appender.console.type = CONSOLE
     appender.console.layout.type = PatternLayout
-    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c %x - %m%n
+    appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS} [%t] %-5p %-60c %x - %m%n
 
     # Log all infos in the given rolling file
     appender.rolling.name = RollingFileAppender
@@ -69,7 +69,7 @@ data:
     appender.rolling.fileName = ${sys:log.file}
     appender.rolling.filePattern = ${sys:log.file}.%i
     appender.rolling.layout.type = PatternLayout
-    appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c %x - %m%n
+    appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS} [%t] %-5p %-60c %x - %m%n
     appender.rolling.policies.type = Policies
     appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
     appender.rolling.policies.size.size=100MB
