--- a/paas/flink-configuration-configmap.yaml
+++ b/paas/flink-configuration-configmap.yaml
@@ -28,6 +28,7 @@ data:
     execution.checkpointing.min-pause: 30000 
     execution.checkpointing.tolerable-failed-checkpoints: 5
     execution.checkpointing.mode: AT_LEAST_ONCE
+    taskmanager.network.memory.buffer-debloat.enabled: true
     jobmanager.scheduler: adaptive
     slot.idle.timeout: 5000
     slot.request.timeout: 20000
