--- a/paas/taskmanager-session-deployment.yaml
+++ b/paas/taskmanager-session-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: taskmanager
-          image: registry.paas.psnc.pl/ecloud-poc/flink-rich-node-poc:latest-k
+          image: registry.paas.psnc.pl/ecloud-poc/flink-rich-node-poc:latest
           imagePullPolicy: Always
           args: ["taskmanager"]
           ports:
