--- a/k8s/taskmanager-session-deployment.yaml
+++ b/k8s/taskmanager-session-deployment.yaml
@@ -32,6 +32,8 @@ spec:
           volumeMounts:
             - name: flink-config-volume
               mountPath: /opt/flink/conf/
+            - name: job-manager-checkpoints-volume-claim
+              mountPath: /data/flink/checkpoints
           securityContext:
             runAsUser: 9999  # refers to user _flink_ from official flink image, change if necessary
       volumes:
@@ -43,3 +45,6 @@ spec:
                 path: flink-conf.yaml
               - key: log4j-console.properties
                 path: log4j-console.properties
+        - name: job-manager-checkpoints-volume-claim
+          persistentVolumeClaim:
+            claimName: job-manager-checkpoints-volume-claim
