--- a/pom.xml
+++ b/pom.xml
@@ -479,6 +479,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
