--- a/flinkPoCPG/pom.xml
+++ b/flinkPoCPG/pom.xml
@@ -16,6 +16,31 @@
         <metis.version>12-SNAPSHOT</metis.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>libs-release</id>
+            <name>libs-release</name>
+            <url>https://artifactory.eanadev.org/artifactory/libs-release</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>libs-snapshot</id>
+            <name>libs-snapshot</name>
+            <url>https://artifactory.eanadev.org/artifactory/libs-snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -154,6 +179,11 @@
                     <groupId>log4j-slf4j-impl</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>eu.europeana.metis</groupId>
+            <artifactId>metis-harvesting</artifactId>
+            <version>${metis.version}</version>
         </dependency>
     </dependencies>
 
