MET-5972 Flink poc docker image is now built from the module flinkPoCPG whihc contains postgresBinaries.

--- a/flinkPoCPG/pom.xml
+++ b/flinkPoCPG/pom.xml
@@ -188,7 +188,35 @@
     </dependencies>
 
     <build>
-
+        <plugins>
+            <!-- Bind the maven-assembly-plugin to the package phase this will create
+            a jar file without the storm dependencies suitable for deployment to a cluster. -->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <configuration>
+                            <finalName>flink-poc-postgres</finalName>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <archive>
+                                <manifest>
+                                    <mainClass>
+                                        eu.europeana.cloud.flink.clustertest.ClusterTestJob
+                                    </mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
-
 </project>
