--- a/flinkPoCPG/pom.xml
+++ b/flinkPoCPG/pom.xml
@@ -185,6 +185,11 @@
             <artifactId>metis-harvesting</artifactId>
             <version>${metis.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europeana.cloud.flink</groupId>
+            <artifactId>flink-poc-client</artifactId>
+            <version>1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
