--- a/flinkPoCPG/pom.xml
+++ b/flinkPoCPG/pom.xml
@@ -15,6 +15,7 @@
         <flink-version>1.18.1</flink-version>
         <metis.version>12-SNAPSHOT</metis.version>
         <jackson.version>2.16.1</jackson.version>
+        <version.spring-framework>6.1.4</version.spring-framework>
     </properties>
 
     <repositories>
@@ -219,6 +220,17 @@
         </dependency>
     </dependencies>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-framework-bom</artifactId>
+                <version>${version.spring-framework}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <build>
         <plugins>
             <!-- Bind the maven-assembly-plugin to the package phase this will create
