--- a/flinkPoCPG/pom.xml
+++ b/flinkPoCPG/pom.xml
@@ -218,6 +218,11 @@
             <artifactId>flink-poc-client</artifactId>
             <version>1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
